--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/>
+  <meta name="description" content="Can we generate synthetic and labeled sperm videos that captures the behaviour and textures of real ones using diffusion models and GANs?">
+  <meta property="og:title" content="Real-like synthetic sperm video generation from learned behaviors"/>
+  <meta property="og:description" content="Can we generate synthetic and labeled sperm videos that captures the behaviour and textures of real ones using diffusion models and GANs?"/>
+  <meta property="og:url" content="https://sergiohdezg.github.io/sperm-diffuser/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/image/carousel.jpg" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
+  <meta name="twitter:title" content="Real-like synthetic sperm video generation from learned behaviors">
+  <meta name="twitter:description" content="Can we generate synthetic and labeled sperm videos that captures the behaviour and textures of real ones using diffusion models and GANs?">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
+  <meta name="twitter:image" content="static/image/carousel.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
+  <meta name="keywords" content="Sperm modeling, Sperm analysis, Diffusion models, Synthetic video, Synthetic dataset, Style transfer, Deep learning, research paper">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>Real-like synthetic sperm video generation from learned behaviors</title>
 <!--  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">-->  <!-- web icon -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
